Added particle transfers to GPU

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ enable_language(CXX)
 #if(NOT DEFINED CMAKE_CUDA_STANDARD)
     set(CMAKE_CUDA_STANDARD 11)
     set(CMAKE_CUDA_STANDARD_REQUIRED ON)
+    set(CUDA_SEPARABLE_COMPILATION ON)
     #include_directories(${CUDA_INCLUDE_DIRS})
     #SET(ALL_CUDA_LIBS ${CUDA_LIBRARIES})
     #message(STATUS "CUDA_LIBRARIES: ${CUDA_INCLUDE_DIRS} ${ALL_CUDA_LIBS} ${CUDA_LIBRARIES}")
