--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,13 @@
         "functional": "cpp",
         "istream": "cpp",
         "tuple": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "vector": "cpp",
+        "random": "cpp",
+        "bitset": "cpp",
+        "string_view": "cpp",
+        "slist": "cpp",
+        "initializer_list": "cpp",
+        "valarray": "cpp"
     }
 }
