Fucked up eveything

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,18 @@ testsuite/pi_water/traj.xyz
 testsuite/tabulated/pot-cosine.txt
 testsuite/tabulated/pot-fene.txt
 testsuite/tabulated/pot-lj.txt
+lennard_jones_fluid_G_22.066735.xyz
+lennard_jones_fluid_G_28.918896.xyz
+lennard_jones_fluid_G_38.231762.xyz
+lennard_jones_fluid_G_41.112858.xyz
+lennard_jones_fluid_G_52.099714.xyz
+lennard_jones_fluid_G_54.970022.xyz
+lennard_jones_fluid_G_68.045151.xyz
+metrics.prof
+output.prof
+output1.prof
+output12.prof
+timeline.prof
+timeline1.prof
+timeline12.prof
+.gitignore
