--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,8 +56,9 @@ add_library(_espressopp ${ESPRESSO_SOURCES})
 target_compile_features(_espressopp PUBLIC cxx_std_11)
 target_compile_options(_espressopp PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
                            --generate-line-info
-                           --use_fast_math
                            --relocatable-device-code=true
+                           -prec-div=true
+                           --ftz=false
                            -gencode=arch=compute_30,code=compute_30
                            >)
 set_target_properties(_espressopp PROPERTIES CUDA_SEPERABLE_COMPILATION ON)
