--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,11 +51,11 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_library(_espressopp ${ESPRESSO_SOURCES})
 
 #cuda
-# target_compile_features(_espressopp PUBLIC cxx_std_11)
+target_compile_features(_espressopp PUBLIC cxx_std_11)
 # target_compile_options(_espressopp PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
 #                            --generate-line-info
 #                            >)                           
-# set_target_properties(_espressopp PROPERTIES CUDA_SEPERABLE_COMPILATION ON)
+set_target_properties(_espressopp PROPERTIES CUDA_SEPERABLE_COMPILATION ON)
 
 
 target_link_libraries(_espressopp ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${MPI_LIBRARIES} ${FFTW3_LIBRARIES} ${VAMPIRTRACE_LIBRARIES})
